IND-EFD: [#72] use Telstra NTP servers.
Modify chrony.conf config file to use Telstra NTP servers to minimise
probability of being charged for NTP network traffic.

* tic.ntp.telstra.net
* toc.ntp.telstra.net

--- a/ind-efd/root/etc/chrony/chrony.conf
+++ b/ind-efd/root/etc/chrony/chrony.conf
@@ -19,12 +19,13 @@
 
 #server 0.au.pool.ntp.org offline minpoll 8
 
-server 0.au.pool.ntp.org iburst
-server 1.au.pool.ntp.org iburst
-server 2.au.pool.ntp.org iburst
-server 3.au.pool.ntp.org iburst
+#server 0.au.pool.ntp.org iburst
+#server 1.au.pool.ntp.org iburst
+#server 2.au.pool.ntp.org iburst
+#server 3.au.pool.ntp.org iburst
 
-
+server tic.ntp.telstra.net iburst
+server toc.ntp.telstra.net iburst
 
 makestep 1000 -1
 
