--- a/ind-efd/root/etc/sensors.d/efd.conf
+++ b/ind-efd/root/etc/sensors.d/efd.conf
@@ -7,6 +7,8 @@
 #
 # File with names that start with a dot are ignored.
 
+#-----------------------------------------------------------------------------
+
 #chip "lm78-*" "lm79-*" "lm80-*" "lm96080-*"
 #chip "lm75*-*"
 chip "lm75b-*"
@@ -17,6 +19,7 @@ chip "lm75b-*"
     set temp1_max   70
     set temp1_crit  85
 
+#-----------------------------------------------------------------------------
 
 chip "mcp3021-*"
 
@@ -29,4 +32,38 @@ chip "mcp3021-*"
 
     set in0_min   9.0
     set in0_max   15.0
+
+#-----------------------------------------------------------------------------
+
+# FIXME: can't specify i2c bus (i2c-1) for some reason !!
+#chip "mcp3021-i2c-1-4d"
+chip "mcp3021-i2c-*-4d"
+
+    # Voltage inputs
+
+    label in0 "Vbat"
+
+    # Scale input up/down due to reistor divider (680k / 110k).
+    compute in0   @*((680/110)+1), @/((680/110)+1)
+
+    set in0_min   9.0
+    set in0_max   15.0
+
+#-----------------------------------------------------------------------------
+
+# FIXME: can't specify i2c bus (i2c-1) for some reason !!
+#chip "mcp3021-i2c-1-4e"
+chip "mcp3021-i2c-*-4e"
+
+    # Voltage inputs
+
+    label in0 "Vsup"
+
+    # Scale input up/down due to reistor divider (680k / 110k).
+    compute in0   @*((680/110)+1), @/((680/110)+1)
+
+    set in0_min   9.0
+    set in0_max   15.0
+
+#-----------------------------------------------------------------------------
 
