[IND,chrony] initstepskew, rtconutc, extra logging
* Fix `initstepskew` to match servers in `server` settings.
* Enable `rtconutc` as our rtc is stored in utc.
* Add extra logging.

--- a/ind-efd/root/etc/chrony/chrony.conf
+++ b/ind-efd/root/etc/chrony/chrony.conf
@@ -29,7 +29,8 @@ server toc.ntp.telstra.net iburst
 
 makestep 1000 -1
 
-initstepslew 30 0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org 3.au.pool.ntp.org
+#initstepslew 30 0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org 3.au.pool.ntp.org
+initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
 
 #set larger delay to allow the NMEA source to overlap with
 #the other sources and avoid the falseticker status.
@@ -67,7 +68,8 @@ driftfile /var/lib/chrony/chrony.drift
 
 # Comment this line out to turn off logging.
 
-log tracking measurements statistics
+#log measurements statistics tracking
+log measurements statistics tracking rtc refclocks tempcomp
 logdir /var/log/chrony
 
 # Stop bad estimates upsetting machine clock.
@@ -116,4 +118,4 @@ logchange 0.5
 # chrony will assume local time.  The line (if any) was written by the
 # chrony postinst based on what it found in /etc/default/rcS.  You may
 # change it if necessary. 
-# rtconutc
+rtconutc
