--- a/ind-efd/root/etc/chrony/chrony.conf
+++ b/ind-efd/root/etc/chrony/chrony.conf
@@ -23,14 +23,14 @@
 #server 1.au.pool.ntp.org iburst
 #server 2.au.pool.ntp.org iburst
 #server 3.au.pool.ntp.org iburst
+#server tic.ntp.telstra.net iburst
+#server toc.ntp.telstra.net iburst
 
-server tic.ntp.telstra.net iburst
-server toc.ntp.telstra.net iburst
-
-makestep 1000 -1
+#makestep 1000 -1
+makestep 0.1 3
 
 #initstepslew 30 0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org 3.au.pool.ntp.org
-initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
+#initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
 
 #set larger delay to allow the NMEA source to overlap with
 #the other sources and avoid the falseticker status.
@@ -38,14 +38,13 @@ initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
 refclock SHM 0 refid GPS precision 1e-1 offset 0.9999 delay 0.2
 
 ## use this for high precions PPS.
-refclock SHM 1 refid PPS precision 1e-9
+#refclock SHM 1 refid PPS precision 1e-9
 
 ## use this for high precions PPS, and gpsd running as root.
 #refclock SOCK /var/run/chrony.ttyXX.sock refid PPS
 
 ## use this for high precions PPS, and gpsd not running as root.
 #refclock SOCK /tmp/chrony.ttyXX.sock refid PPS
-
 
 
 # Look here for the admin password needed for chronyc.  The initial
@@ -70,6 +69,7 @@ driftfile /var/lib/chrony/chrony.drift
 
 #log measurements statistics tracking
 log measurements statistics tracking rtc refclocks tempcomp
+
 logdir /var/log/chrony
 
 # Stop bad estimates upsetting machine clock.
@@ -90,9 +90,9 @@ local stratum 10
 
 # Allow computers on the unrouted nets to use the server.
 
-allow 10/8
-allow 192.168/16
-allow 172.16/12
+#allow 10/8
+#allow 192.168/16
+#allow 172.16/12
 
 # This directive forces `chronyd' to send a message to syslog if it
 # makes a system clock adjustment larger than a threshold value in seconds.
