[IND,chrony] Make a step anytime offset is > 1 sec.
* Make a step anytime the correction offset is > 1 second.
  (anytime, not just in first few readings).

--- a/ind-efd/root/etc/chrony/chrony.conf
+++ b/ind-efd/root/etc/chrony/chrony.conf
@@ -27,7 +27,8 @@
 #server toc.ntp.telstra.net iburst
 
 #makestep 1000 -1
-makestep 0.1 3
+#makestep 0.1 3
+makestep 1 -1
 
 #initstepslew 30 0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org 3.au.pool.ntp.org
 #initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
