[IND,chrony,gpsd] Restart gpsd after chrony.
* Force restart of `gpsd` service after `chrony` service is (re)started.

  This is implemented by making `gpsd` always restart if it exits,
  and by sending the TERM signal to `gpsd` after `chrony` is (re)started,
  therefore causing systemd to restart `gpsd`.

--- a/ind-efd/root/etc/systemd/system/chrony.service
+++ b/ind-efd/root/etc/systemd/system/chrony.service
@@ -18,6 +18,9 @@ ConditionCapability=CAP_SYS_TIME
 Type=forking
 PIDFile=/run/chronyd.pid
 ExecStart=/usr/sbin/chronyd
+## kill gpsd after chrony has started to force restart.
+## assumes gpsd has been configured to always restart !!
+ExecStartPost=-/usr/bin/killall -TERM gpsd
 PrivateTmp=yes
 ProtectHome=yes
 ProtectSystem=full
