[IND,backports] Config to add `jessie-backports` repository.

--- a/ind-efd/config
+++ b/ind-efd/config
@@ -1,4 +1,5 @@
 SUITE="jessie"
+BACKPORTS="${SUITE}-backports"
 ARCH="armhf"
 DEBIAN_MIRROR=${DEBIAN_MIRROR:-"http://mirror.aarnet.edu.au/debian"}
 #DEBIAN_MIRROR=${DEBIAN_MIRROR:-"http://debian.mirror.serversaustralia.com.au/debian"}
