--- a/ind-efd/multistrap.conf
+++ b/ind-efd/multistrap.conf
@@ -4,7 +4,8 @@ cleanup=true
 unpack=true
 aptdefaultrelease="o=jessie"
 #bootstrap=ev3dev Debian
-bootstrap=Debian
+#bootstrap=Debian
+bootstrap=Debian-Backports Debian
 omitrequired=false
 addimportant=false
 allowrecommends=false
@@ -15,12 +16,25 @@ allowrecommends=false
 #suite=$SUITE
 #omitdebsrc=true
 
+[Debian-Backports]
+packages=
+#packages=$PACKAGES
+#packages=gpsd/$BACKPORTS
+source=$DEBIAN_MIRROR
+keyring=debian-archive-keyring
+#components=main contrib non-free
+components=main contrib
+suite=$BACKPORTS
+omitdebsrc=true
+
 [Debian]
 packages=
 packages=$PACKAGES
 #packages=busybox
 source=$DEBIAN_MIRROR
 keyring=debian-archive-keyring
-components=main contrib non-free
+#components=main contrib non-free
+components=main contrib
 suite=$SUITE
 omitdebsrc=true
+
