--- a/ind-efd/root/etc/systemd/system/chrony.service
+++ b/ind-efd/root/etc/systemd/system/chrony.service
@@ -18,7 +18,9 @@ ConditionCapability=CAP_SYS_TIME
 Type=forking
 PIDFile=/run/chronyd.pid
 ## chrony has trouble syncing times that are too old, so reset to year 2000.
-ExecStartPre=/bin/bash -c '/usr/bin/test $(date +"%Y") -lt 2000 && date --set="2000-01-01 00:00:00" || true'
+## DEPRECATED: using `gpsd 3.16-3` from `jessie-backports` fixes time sync
+## issues and the kludge to preset date to year 2000 is no longer required.
+#ExecStartPre=/bin/bash -c '/usr/bin/test $(date +"%Y") -lt 2000 && date --set="2000-01-01 00:00:00" || true'
 ExecStart=/usr/sbin/chronyd
 ## kill gpsd after chrony has started to force restart.
 ## assumes gpsd has been configured to always restart !!
