--- a/ind-efd/multistrap.conf
+++ b/ind-efd/multistrap.conf
@@ -4,8 +4,8 @@ cleanup=true
 unpack=true
 aptdefaultrelease="o=jessie"
 #bootstrap=ev3dev Debian
-#bootstrap=Debian
-bootstrap=Debian-Backports Debian
+bootstrap=Debian
+#bootstrap=Debian-Backports Debian
 omitrequired=false
 addimportant=false
 allowrecommends=false
