--- a/ind-efd/root/etc/rsyslog_SEPL.conf
+++ b/ind-efd/root/etc/rsyslog_SEPL.conf
@@ -1,6 +1,7 @@
 #  /etc/rsyslog.conf	Configuration file for rsyslog.
 #
 #			For more information see
+#			/usr/share/doc/rsyslog-doc/html/rsyslog_conf.html
 
 
 #################
@@ -8,7 +9,6 @@
 #################
 
 $ModLoad imuxsock # provides support for local system logging
-/cron
 $ModLoad imklog   # provides kernel logging support
 #$ModLoad immark  # provides --MARK-- message capability
 
@@ -110,7 +110,7 @@ news.notice			-/var/log/news/news.notice
 
 # The named pipe /dev/xconsole is for the `xconsole' utility.  To use it,
 # you must invoke `xconsole' with the `-file' option:
-# 
+#
 #    $ xconsole -file /dev/xconsole [...]
 #
 # NOTE: adjust the list below, or you'll go crazy if you have a reasonably
