[ind-efd][efd.service] Always restart the efd service if it dies

--- a/ind-efd/root/etc/systemd/system/efd.service
+++ b/ind-efd/root/etc/systemd/system/efd.service
@@ -6,7 +6,7 @@ After=network.target auditd.service
 ExecStart=/opt/sbin/efd_app.py
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
-Restart=on-failure
+Restart=always
 #Type=simple
 #User=example
 #Group=example
