--- a/ind-efd/root/etc/chrony/chrony_SEPL.conf
+++ b/ind-efd/root/etc/chrony/chrony_SEPL.conf
@@ -2,6 +2,8 @@
 # editing this file use the command 'invoke-rc.d chrony restart' to make
 # your changes take effect.  John Hasler <jhasler@debian.org> 1998-2008
 
+
+
 # See www.pool.ntp.org for an explanation of these servers.  Please
 # consider joining the project if possible.  If you can't or don't want to
 # use these servers I suggest that you try your ISP's nameservers.  We mark
@@ -14,7 +16,7 @@
 # directive and chronyd will default to online.
 #
 # Note that if Chrony tries to go "online" and dns lookup of the servers
-# fails they will be discarded.  Thus under some circumstances it is 
+# fails they will be discarded.  Thus under some circumstances it is
 # better to use IP numbers than host names.
 
 #server 0.au.pool.ntp.org offline minpoll 8
@@ -26,26 +28,38 @@
 #server tic.ntp.telstra.net iburst
 #server toc.ntp.telstra.net iburst
 
-#makestep 1000 -1
-#makestep 0.1 3
-makestep 1 -1
+
+
+#! initstepslew will step the system clock for some initial duration,
+#! and will wait in foreground, preventing other services and apps from
+#! starting before time has been stepped.
+#! NOTE: initstepslew only works with NTP sources (not GPS reference sources)
 
 #initstepslew 30 0.au.pool.ntp.org 1.au.pool.ntp.org 2.au.pool.ntp.org 3.au.pool.ntp.org
 #initstepslew 30 tic.ntp.telstra.net toc.ntp.telstra.net
+
+
+#! Allow chrony to step the time (big jumps) if time out by some threshold,
+#! and for some limited number of updates (-1 => unlimited)
+
+#makestep 1000 -1
+#makestep 1 -1
+#makestep 1.0 3
+makestep 0.1 3
+
+
 
 #set larger delay to allow the NMEA source to overlap with
 #the other sources and avoid the falseticker status.
 #Use SOCK instead of SHM 1 to use CHRONY high precision socket interface.
 refclock SHM 0 refid GPS precision 1e-1 offset 0.9999 delay 0.2
 
-## use this for high precions PPS.
-#refclock SHM 1 refid PPS precision 1e-9
+#! use this for high precions PPS.
+#refclock SHM 1 refid SHM precision 1e-9 delay 0.1
 
-## use this for high precions PPS, and gpsd running as root.
-#refclock SOCK /var/run/chrony.ttyXX.sock refid PPS
+#! use this for high precions PPS via socket interface, and gpsd running as root.
+#refclock SOCK /var/run/chrony.ttyPS1.sock refid SOCK delay 0.0
 
-## use this for high precions PPS, and gpsd not running as root.
-#refclock SOCK /tmp/chrony.ttyXX.sock refid PPS
 
 
 # Look here for the admin password needed for chronyc.  The initial
@@ -54,6 +68,8 @@ refclock SHM 0 refid GPS precision 1e-1 offset 0.9999 delay 0.2
 
 keyfile /etc/chrony/chrony.keys
 
+
+
 # Set runtime command key.  Note that if you change the key (not the
 # password) to anything other than 1 you will need to edit
 # /etc/ppp/ip-up.d/chrony, /etc/ppp/ip-down.d/chrony, /etc/init.d/chrony
@@ -61,10 +77,14 @@ keyfile /etc/chrony/chrony.keys
 
 commandkey 1
 
+
+
 # I moved the driftfile to /var/lib/chrony to comply with the Debian
 # filesystem standard.
 
 driftfile /var/lib/chrony/chrony.drift
+
+
 
 # Comment this line out to turn off logging.
 
@@ -73,9 +93,15 @@ log measurements statistics tracking rtc refclocks tempcomp
 
 logdir /var/log/chrony
 
-# Stop bad estimates upsetting machine clock.
 
-maxupdateskew 100.0
+
+# Stop bad estimates upsetting machine clock.
+# 1000 ppm is recommended for NMEA devices (100 for dialup, 5-10 for LAN)
+
+#maxupdateskew 100.0
+maxupdateskew 1000.0
+
+
 
 # Dump measurements when daemon exits.
 
@@ -85,26 +111,40 @@ dumponexit
 
 dumpdir /var/lib/chrony
 
+
+
+
 # Let computer be a server when it is unsynchronised.
 
-local stratum 10
+#local stratum 10
+#local stratum 1
 
-# Allow computers on the unrouted nets to use the server.
+
+
+# Allow/deny computers on the unrouted nets to use the server.
+
+deny all
 
 #allow 10/8
 #allow 192.168/16
 #allow 172.16/12
+
+
 
 # This directive forces `chronyd' to send a message to syslog if it
 # makes a system clock adjustment larger than a threshold value in seconds.
 
 logchange 0.5
 
+
+
 # This directive defines an email address to which mail should be sent
 # if chronyd applies a correction exceeding a particular threshold to the
 # system clock.
 
 # mailonchange root@localhost 0.5
+
+
 
 # This directive tells chrony to regulate the real-time clock and tells it
 # Where to store related data.  It may not work on some newer motherboards
@@ -118,5 +158,6 @@ logchange 0.5
 # the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
 # chrony will assume local time.  The line (if any) was written by the
 # chrony postinst based on what it found in /etc/default/rcS.  You may
-# change it if necessary. 
+# change it if necessary.
+
 rtconutc
