[ind-efd][BBB#163] Ensure `gpsd` is started before `gps-nmea-logger`
Add `Requires=gpsd` directive to ensure that `gpsd` is started.

Add `After=gpsd` directive to ensure `gpsd` is started before
`gps-nmea-logger` service.  If the logger starts first it will open
the device file `/dev/ttyPS1` exclusively and `gpsd` wont start at all,
which is no good for `chrony`

--- a/ind-efd/root/etc/systemd/system/gps-nmea-logger.service
+++ b/ind-efd/root/etc/systemd/system/gps-nmea-logger.service
@@ -1,17 +1,33 @@
+#!=============================================================================
 #!
-#! Successful Endeavours
+#! Successful Endeavours Pty Ltd
 #!
 #! Service to log GPS NMEA sentences to disk for diagnostics
 #!
+#!=============================================================================
 
 [Unit]
+
 Description=GPS NMEA Logger service
-After=network.target auditd.service
+
+Requires=gpsd.service
+
+After=network.target auditd.service gpsd.service
+
+#!=============================================================================
 
 [Service]
+
 ExecStart=/opt/sbin/gps_nmea_logger.sh
+
 KillMode=process
+
 Restart=always
 
+#!=============================================================================
+
 [Install]
+
 WantedBy=multi-user.target
+
+#!=============================================================================
