--- a/ind-efd/root/etc/systemd/system/efd-rf-status.service
+++ b/ind-efd/root/etc/systemd/system/efd-rf-status.service
@@ -1,12 +1,34 @@
+#!============================================================================
+#!
+#!  systemd service to log status of RF systems (Modem, GPS)
+#!
+#!  NOTE: this is not enabled.  Status logging is currently performed in
+#!        `check-internet-connection.sh` scirpt.
+#!
+#!  Copyright (C) 2019-2019 Successful Endeavours Pty Ltd
+#!
+#!============================================================================
+
 [Unit]
+
 Description=Log Status of RF systems (Modem, GPS)
+
 After=network.target auditd.service
 
+#!============================================================================
+
 [Service]
+
 ExecStart=/opt/sbin/efd_rf_status.py
+
 KillMode=process
+
 Restart=always
 
+#!============================================================================
+
 [Install]
+
 WantedBy=multi-user.target
 
+#!============================================================================
