--- a/ind-efd/root/etc/systemd/system/gpsd.service
+++ b/ind-efd/root/etc/systemd/system/gpsd.service
@@ -1,13 +1,11 @@
 #!============================================================================
 #!
-#! Successful Endeavours
+#!  Successful Endeavours
 #!
-#! Customised version of /lib/systemd/system/gpsd.service
+#!  Customised version of /lib/systemd/system/gpsd.service
 #!
-#! The `Restart=always` stanza was added to keep restart the service if it
-#! exits.  We take advantage of this in the chrony.service, which kills
-#! `gpsd` after `chronyd` starts, to force `gpsd` to restart after `chronyd`,
-#!  which is recommended when using the SOCK driver in `chrony`.
+#!  This may not be needed any longer?
+#!  It's only here for the addition of `Restart=always`
 #!
 #!============================================================================
 
@@ -17,13 +15,18 @@ Description=GPS (Global Positioning System) Daemon
 
 Requires=gpsd.socket
 
+#! Needed with chrony SOCK refclock
+After=chronyd.service
+
 #!============================================================================
 
 [Service]
 
+Type=forking
+
 EnvironmentFile=-/etc/default/gpsd
 
-ExecStart=/usr/sbin/gpsd -N $GPSD_OPTIONS $DEVICES
+ExecStart=/usr/sbin/gpsd $GPSD_OPTIONS $DEVICES
 
 Restart=always
 
