[ind-efd][chrony_SEPL.conf] Remove unsuported `commandkey` directive

--- a/ind-efd/root/etc/chrony/chrony_SEPL.conf
+++ b/ind-efd/root/etc/chrony/chrony_SEPL.conf
@@ -19,7 +19,7 @@
 # fails they will be discarded.  Thus under some circumstances it is
 # better to use IP numbers than host names.
 
-#server 0.au.pool.ntp.org offline minpoll 8
+#server au.pool.ntp.org iburst
 
 #server 0.au.pool.ntp.org iburst
 #server 1.au.pool.ntp.org iburst
@@ -70,12 +70,14 @@ keyfile /etc/chrony/chrony.keys
 
 
 
-# Set runtime command key.  Note that if you change the key (not the
-# password) to anything other than 1 you will need to edit
-# /etc/ppp/ip-up.d/chrony, /etc/ppp/ip-down.d/chrony, /etc/init.d/chrony
-# and /etc/cron.weekly/chrony as these scripts use it to get the password.
+#! NOTE: commandkey directive no longer supported !!
+#!
+#! Set runtime command key.  Note that if you change the key (not the
+#! password) to anything other than 1 you will need to edit
+#! /etc/ppp/ip-up.d/chrony, /etc/ppp/ip-down.d/chrony, /etc/init.d/chrony
+#! and /etc/cron.weekly/chrony as these scripts use it to get the password.
 
-commandkey 1
+#commandkey 1
 
 
 
