--- a/ind-efd/root/etc/systemd/system/serial-getty@ttyS1.service
+++ b/ind-efd/root/etc/systemd/system/serial-getty@ttyS1.service
@@ -1,10 +1,9 @@
 #!============================================================================
-#! This file is part of systemd.
 #!
-#! systemd is free software; you can redistribute it and/or modify it
-#! under the terms of the GNU Lesser General Public License as published by
-#! the Free Software Foundation; either version 2.1 of the License, or
-#! (at your option) any later version.
+#!  Successful Endeavours Pty Ltd
+#!
+#!  Customised version of /lib/systemd/system/serial-getty\@.service
+#!
 #!============================================================================
 
 [Unit]
@@ -17,7 +16,7 @@ Documentation=http://0pointer.de/blog/projects/serial-console.html
 
 BindsTo=dev-%i.device
 
-After=dev-%i.device systemd-user-sessions.service plymouth-quit-wait.service
+After=dev-%i.device systemd-user-sessions.service plymouth-quit-wait.service getty-pre.target
 After=rc-local.service
 
 #! If additional gettys are spawned during boot then we should make
@@ -28,12 +27,25 @@ Before=getty.target
 
 IgnoreOnIsolate=yes
 
+# IgnoreOnIsolate causes issues with sulogin, if someone isolates
+# rescue.target or starts rescue.service from multi-user.target or
+# graphical.target.
+
+Conflicts=rescue.service
+
+Before=rescue.service
+
 #!============================================================================
 
 [Service]
 
-#ExecStart=-/sbin/agetty --keep-baud 115200,38400,9600 %I $TERM
-ExecStart=-/sbin/agetty -L 38400 %I $TERM
+# The '-o' option value tells agetty to replace 'login' arguments with an
+# option to preserve environment (-p), followed by '--' for safety, and then
+# the entered username.
+
+#ExecStart=-/sbin/agetty -o '-p -- \\u' --keep-baud 115200,38400,9600 %I $TERM
+ExecStart=-/sbin/agetty -o '-p -- \\u' -L 38400 %I $TERM
+#ExecStart=-/sbin/agetty -L 38400 %I $TERM
 
 Type=idle
 
