[ind-efd][BB#164][chrony.conf] Add `rtcsysnc` to keep RTC up to date

--- a/ind-efd/root/etc/chrony/chrony_SEPL.conf
+++ b/ind-efd/root/etc/chrony/chrony_SEPL.conf
@@ -148,18 +148,39 @@ logchange 0.5
 
 
 
-# This directive tells chrony to regulate the real-time clock and tells it
-# Where to store related data.  It may not work on some newer motherboards
-# that use the HPET real-time clock.  It requires enhanced real-time
-# support in the kernel.  I've commented it out because with certain
-# combinations of motherboard and kernel it is reported to cause lockups.
+#!
+#! NOTE: enabling rtcfile causes the `hwclock` utility to not work !!
+#!       Maybe it's a kernel config thing, or just doesn't work on ARM?
+#!
 
-# rtcfile /var/lib/chrony/chrony.rtc
+#! This directive tells chrony to regulate the real-time clock and tells it
+#! Where to store related data.  It may not work on some newer motherboards
+#! that use the HPET real-time clock.  It requires enhanced real-time
+#! support in the kernel.  I've commented it out because with certain
+#! combinations of motherboard and kernel it is reported to cause lockups.
 
-# If the last line of this file reads 'rtconutc' chrony will assume that
-# the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
-# chrony will assume local time.  The line (if any) was written by the
-# chrony postinst based on what it found in /etc/default/rcS.  You may
-# change it if necessary.
+#rtcfile /var/lib/chrony/chrony.rtc
+
+#! The rtcautotrim directive is used to keep the RTC close to the system clock
+#! automatically. When the system clock is synchronised and the estimated error
+#! between the two clocks is larger than the specified threshold,
+#! chronyd will trim the RTC as if the trimrtc command in chronyc was issued.
+#!
+#! This directive is effective only with the rtcfile directive.
+
+#rtcautotrim 2
+
+#! The rtcsync directive enables a mode where the system time is periodically
+#! copied to the RTC and chronyd does not try to track its drift.
+#! This directive cannot be used with the rtcfile directive.
+#! On Linux, the RTC copy is performed by the kernel every 11 minutes.
+
+rtcsync
+
+#! If the last line of this file reads 'rtconutc' chrony will assume that
+#! the CMOS clock is on UTC (GMT).  If it reads '# rtconutc' or is absent
+#! chrony will assume local time.  The line (if any) was written by the
+#! chrony postinst based on what it found in /etc/default/rcS.  You may
+#! change it if necessary.
 
 rtconutc
