[ind-efd][BB#169][chrony.conf] Tune GPS refclock offset to 372ms
This should improve accuracy of system time.

--- a/ind-efd/root/etc/chrony/chrony_SEPL.conf
+++ b/ind-efd/root/etc/chrony/chrony_SEPL.conf
@@ -49,15 +49,20 @@ makestep 0.1 3
 
 
 
-#set larger delay to allow the NMEA source to overlap with
-#the other sources and avoid the falseticker status.
-#Use SOCK instead of SHM 1 to use CHRONY high precision socket interface.
-refclock SHM 0 refid GPS precision 1e-1 offset 0.9999 delay 0.2
+#! set larger delay to allow the NMEA source to overlap with
+#! the other sources and avoid the falseticker status.
+#! 24 hour performance tuning showed offset ranges between 325ms-407ms
+#! Average was approx 372.5ms, so lets go with that.
+
+refclock SHM 0 refid GPS precision 1e-1 offset 0.372 delay 0.2
 
 #! use this for high precions PPS.
+#! Use SOCK instead of SHM 1 to use CHRONY high precision socket interface.
+
 #refclock SHM 1 refid SHM precision 1e-9 delay 0.1
 
-#! use this for high precions PPS via socket interface, and gpsd running as root.
+#! use SOCK for high precions PPS via socket interface, and gpsd running as root.
+
 #refclock SOCK /var/run/chrony.ttyPS1.sock refid SOCK delay 0.0
 
 
