[ind-efd][BB#162] Add support to install `gpsd` from `experimental`
* Add support to install `gpsd` and freinds from the
`experimental` repoistory.

**NOTE: `gpsd-client` pulls in an extra 110MB of dependencies !!**

Unfortunately `gpscat` has moved from `python-gps` to `gpsd-clients`
in the `experimental` repository.

--- a/ind-efd/multistrap.conf
+++ b/ind-efd/multistrap.conf
@@ -2,19 +2,32 @@
 arch=$ARCH
 cleanup=true
 unpack=true
-aptdefaultrelease="o=jessie"
-#bootstrap=ev3dev Debian
+aptdefaultrelease="o=buster"
+
 bootstrap=Debian
+
 #bootstrap=Debian-Backports Debian
+
+#bootstrap=Debian-Experimental Debian
+
 omitrequired=false
 addimportant=false
 allowrecommends=false
 
-#[ev3dev]
-#source=$EV3DEV_MIRROR
-#keyring=ev3dev-archive-keyring
-#suite=$SUITE
-#omitdebsrc=true
+
+
+[Debian-Experimental]
+packages=
+#packages=$PACKAGES
+#packages=gpsd/$EXPERIMENTAL gpsd-clients/$EXPERIMENTAL python-gps/$EXPERIMENTAL
+source=$DEBIAN_MIRROR
+keyring=debian-archive-keyring
+#components=main contrib non-free
+components=main contrib
+suite=$EXPERIMENTAL
+omitdebsrc=true
+
+
 
 [Debian-Backports]
 packages=
@@ -26,6 +39,8 @@ keyring=debian-archive-keyring
 components=main contrib
 suite=$BACKPORTS
 omitdebsrc=true
+
+
 
 [Debian]
 packages=
