--- a/ind-efd/config
+++ b/ind-efd/config
@@ -1,6 +1,12 @@
 SUITE="buster"
+
 BACKPORTS="${SUITE}-backports"
+
+EXPERIMENTAL="experimental"
+
 ARCH="armhf"
+
 #DEBIAN_MIRROR=${DEBIAN_MIRROR:-"http://mirror.aarnet.edu.au/debian"}
 DEBIAN_MIRROR=${DEBIAN_MIRROR:-"http://debian.mirror.serversaustralia.com.au/debian"}
+
 IMAGE_FILE_SIZE=${IMAGE_FILE_SIZE:-"1800M"}
