[ind-efd][chrony.service] Fix startup on boot (and in general)
Using `systemctl stop` or `systemctl start` or `systemctl restart`
can cause the service to "hang" or not complete.

Uisng `systemctl kill` to kill gpsd seems to work better.

The move to `systemctl restart` was to make sure the gps nmea logger
would shutdown, but it has been proven that the logger needs to be
written not to use `gpscat` (which talks to the device directly instead
of going throuhg `gpsd`).

--- a/ind-efd/root/etc/systemd/system/chrony.service
+++ b/ind-efd/root/etc/systemd/system/chrony.service
@@ -50,19 +50,18 @@ EnvironmentFile=-/etc/default/chrony
 #! issues and the kludge to preset date to year 2000 is no longer required.
 #ExecStartPre=/bin/bash -c '/usr/bin/test $(date +"%Y") -lt 2000 && date --set="2000-01-01 00:00:00" || true'
 
-#ExecStartPre=-/bin/systemctl stop gpsd.service gpsd.socket
-
 ExecStart=/usr/sbin/chronyd $DAEMON_OPTS
 
 ExecStartPost=-/usr/lib/chrony/chrony-helper update-daemon
 
 #! sleep for bit to ensure chronyd initialisation has completed.
 #! e.g. creating sockets for gpsd
-ExecStartPost=-sleep 2
+#ExecStartPost=-sleep 2
 
 #! kill gpsd after chrony has started to force restart.
 #! assumes gpsd has been configured to always restart !!
 #ExecStartPost=-/usr/bin/killall -TERM gpsd
+ExecStartPost=-systemctl kill gpsd gpsd.socket
 
 #! killing gpsd does not restart the service if gpsd was not running
 #! e.g. if `systemctl stop gpsd gpsd.socket` was issued.
@@ -70,8 +69,9 @@ ExecStartPost=-sleep 2
 #!
 #! NOTE: Using directive `Wants=` (or `Requires=`, `BindsTo=` or `PartOf=`)
 #!       should start up the gpsd.service
-ExecStartPost=-/bin/systemctl stop gpsd.service gpsd.socket
-ExecStartPost=-/bin/systemctl restart gpsd.service
+#!       These can "hang" the service startup if there is any circular dependencies !!
+#ExecStartPost=-/bin/systemctl stop gpsd.service gpsd.socket
+#ExecStartPost=-/bin/systemctl restart gpsd.service gpsd.socket
 
 PrivateTmp=yes
 
